修改controller的一些没有return问题, 添加候补接口
