# server/candidate/controller/api/v1/candidate.go
@@ -3,7 +3,13 @@
 // @Modified at 2021-02-03
 package v1
 
-import "github.com/gin-gonic/gin"
+import (
+	"candidate/controller"
+	"candidate/tools/message"
+	"common/tools/logging"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
 
 type candidateRecv struct {
 	Date        string   `json:"date" binding:"required"`         // 发车日期 yyyy-mm-dd
@@ -16,6 +22,27 @@ type candidateSend struct {
 	OrderOutsideID string `json:"order_outside_id" binding:"required"` // 返回的订单编号
 }
 
+// Candidate 请求服务器执行候补功能 godoc
+// @Summary 请求服务器执行候补功能
+// @Description 发送需要候补的信息给服务器, 服务器将执行候补功能
+// @Accept json
+// @Produce json
+// @Param userID query string true "用户ID"
+// @Param username query string true "用户名"
+// @Param wantPayR body v1.candidateRecv true "需要接受的信息"
+// @Success 200 {object} controller.JSONResult{data=v1.candidateSend} "返回成功"
+// @Failure 400 {object} controller.JSONResult{}
+// @Router / [post]
 func Candidate(c *gin.Context) {
-
+	send := controller.NewSend(c)
+	noData := make(map[string]interface{})
+	var cr candidateRecv
+	if err := c.ShouldBindJSON(&cr); err != nil {
+		logging.Error(err)
+		send.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
+		return
+	}
+	// TODO 业务逻辑
+	var cs candidateSend
+	send.Response(http.StatusOK, controller.NewJSONResult(message.OK, cs))
 }
