# server/candidate/docs/swagger.json
@@ -10,18 +10,18 @@
         "version": "1.0"
     },
     "host": "localhost:8082",
-    "basePath": "/reticket/api/v1",
+    "basePath": "/candidate/api/v1",
     "paths": {
         "/": {
             "post": {
-                "description": "服务器对支付进行验证",
+                "description": "发送需要候补的信息给服务器, 服务器将执行候补功能",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "告知服务器通过支付宝支付完成",
+                "summary": "请求服务器执行候补功能",
                 "parameters": [
                     {
                         "type": "string",
@@ -43,7 +43,70 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.reticketRecv"
+                            "$ref": "#/definitions/v1.candidateRecv"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controller.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.candidateSend"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.JSONResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/cash": {
+            "post": {
+                "description": "发送需要候补的信息给服务器, 服务器将执行候补功能",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "请求服务器执行候补功能",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户ID",
+                        "name": "userID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "需要接受的信息",
+                        "name": "wantPayR",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.cashRecv"
                         }
                     }
                 ],
@@ -52,6 +115,69 @@
                         "description": "返回成功",
                         "schema": {
                             "$ref": "#/definitions/controller.JSONResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.JSONResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/state": {
+            "post": {
+                "description": "发送需要候补的信息给服务器, 服务器将执行候补功能",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "请求服务器执行候补功能",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户ID",
+                        "name": "userID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "需要接受的信息",
+                        "name": "wantPayR",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.readRecv"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controller.JSONResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.readSend"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -79,14 +205,93 @@
                 }
             }
         },
-        "v1.reticketRecv": {
+        "v1.candidateRecv": {
             "type": "object",
             "required": [
-                "ticket_outside_id"
+                "date",
+                "passengers",
+                "time",
+                "train_number"
             ],
             "properties": {
-                "ticket_outside_id": {
+                "date": {
+                    "description": "发车日期 yyyy-mm-dd",
                     "type": "string"
+                },
+                "passengers": {
+                    "description": "乘客id",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "time": {
+                    "description": "发车时间 hh:mm",
+                    "type": "string"
+                },
+                "train_number": {
+                    "description": "车次",
+                    "type": "string"
+                }
+            }
+        },
+        "v1.candidateSend": {
+            "type": "object",
+            "required": [
+                "order_outside_id"
+            ],
+            "properties": {
+                "order_outside_id": {
+                    "description": "返回的订单编号",
+                    "type": "string"
+                }
+            }
+        },
+        "v1.cashRecv": {
+            "type": "object",
+            "required": [
+                "candidate_id"
+            ],
+            "properties": {
+                "candidate_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.readRecv": {
+            "type": "object",
+            "properties": {
+                "candidate_id": {
+                    "description": "候补id",
+                    "type": "string"
+                }
+            }
+        },
+        "v1.readSend": {
+            "type": "object",
+            "properties": {
+                "candidate_id": {
+                    "type": "string"
+                },
+                "passengers": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "certificate_number": {
+                                "description": "证件号",
+                                "type": "string"
+                            },
+                            "name": {
+                                "description": "乘客名",
+                                "type": "string"
+                            },
+                            "type": {
+                                "description": "乘客类型 0为普通乘客, 1为学生",
+                                "type": "integer"
+                            }
+                        }
+                    }
                 }
             }
         }
